tests/invalid/annotation_existing_name_not_type/main.py
def main() -> None:
    y: x = 1

def run_case() -> None:
    x: int = 1

if __name__ == "__main__":
    run_case()
